--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tvjs-xp",
+  "name": "t0rtak1ng-tvjs-xp",
   "version": "0.3.0",
   "description": "Extension pack for trading-vue-js",
   "main": "./dist/tvjs-xp.js",
